@@ -308,8 +308,8 @@ etc/$(RCFILE): $(RCFILE)
 etc:: etc/$(RCFILE)
 
 install::
-	$(MKDIR) $(MKDIRFLAGS) $(SYSRCDIR)
-	$(INSTALL) $(LIBINSTALLFLAGS) etc/$(RCFILE) $(SYSRCDIR)/$(RCFILE)
+	$(MKDIR) $(MKDIRFLAGS) $(BUILDROOT)/$(SYSRCDIR)
+	$(INSTALL) $(LIBINSTALLFLAGS) etc/$(RCFILE) $(BUILDROOT)/$(SYSRCDIR)/$(RCFILE)
 
 distclean::
 	$(RM) etc/$(RCFILE)
